--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "list-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://amalreji111.github.io/listapp",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -29,6 +32,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
